# python-editline

./: .gitignore  CHANGES  CHANGES.rst  CHANGES.txt  LICENSE  MANIFEST.in  Makefile  README  README.md  editline.py  lineeditor.py  pylint.rc  setup.py  sitecustomize.py
check/: Makefile  config.h.in  configure  configure.ac
check/m4/: line_editor.m4
cython/: README.md
cython/docs/: EditLine.md
cython/editline/: editline.pyx  histedit.pxd
docs/: Makefile  conf.py  index.rst
docs/source/: _editline.rst  editline.rst  modules.rst  regression.rst  sitecustomize.rst  testing.rst
docs/source/common/: subs.rst
docs/source/testing/: freebsd.rst  macos.rst  netbsd.rst  openbsd.rst  redhat.rst  solus.rst  sunos.rst  ubuntu.rst
editline/: .gitignore  Makefile  __init__.py  _editline.c  editline.py  editline.pyx  elcompleter.py  hello.c  histedit.pxd  lineeditor.py  readline.c
editline/test/: debug.py  test.py  test_dict_completion.py  test_editline.py  test_lineeditor.py  test_list_completion.py  test_utf8.py  test_utf8_completion.py
editline/tests/: borked_test_utf8_completion.py  expty.py  test_dict_completion.py  test_editline.py  test_lineeditor.py  test_list_completion.py
editline/tests/support/: data_structures.py  widechar.py
examples/: elCmd.py
examples/sys-python-check/: configure.ac
module/: _editline.c  editline.py  lineeditor.py  setup.py
patches/: main.c.patch  python34_main.patch  python35_main.patch  python36_main.patch  python37_main.patch  site.py.patch
regression/: Makefile  Makefile.plat  check_editline.sh  ck_el.sh  do_editline.sh  regress.sh  tidy_editline.sh
regression/patches/: python33_main.patch  python36_main.patch
regression/scripts/: build_venvs.sh  check_editline.sh  do_editline.sh
setupext/: autoconf.py  configure.py
siteconfig/: sitecustomize.py
src/: _editline.c
src/check/: Makefile
src/libedit/: config.h.in
support/: autoconf.py
test/: expty.py  test_editline.py  test_lineeditor.py
